<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/preference_screen_key"
    android:title="@string/preference_screen_title" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/display_ime_key"
        android:summaryOff="@string/display_ime_summary_off"
        android:summaryOn="@string/display_ime_summary_on"
        android:title="@string/display_ime_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="@string/display_ime_key"
        android:key="@string/display_animation_key"
        android:summaryOff="@string/display_animation_summary_off"
        android:summaryOn="@string/display_animation_summary_on"
        android:title="@string/display_animation_title" />

</PreferenceScreen>